--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
       }
     };
 
-    // ===== Google Sheets URL =====
-    const GOOGLE_SHEETS_URL = 'https://script.google.com/macros/s/AKfycbxbx0X973rUfd2SYlJ68CN0nTlCYuEUg2YDVb_RHEcizjX0rwzEJkSSlwDOkA_pPJsV/exec';
+    // ===== Google Sheets URL (อัปเดตตามที่ขอ) =====
+    const GOOGLE_SHEETS_URL = 'https://script.google.com/macros/s/AKfycbzXTzAaDdr7FtX5aTwVOQhTFwuPsPevmXMfmDUFYeKXEmTADjerGVzXVBur2S5IyQ/exec';
 
     let reportCounter = 1;
     let currentLanguage = 'th';
