--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <style>
     :root{
-      --teal:#175f5c;        /* สีธีมตามที่ขอ */
+      --teal:#175f5c;        /* สีธีม เกษตรศาสตร์ */
       --teal-dark:#0d3d3b;
       --text:#111827;
     }
@@ -288,7 +288,7 @@
         title="สถานะการแจ้งซ่อม (Looker Studio)"
         loading="lazy"
         allowfullscreen
-        src="https://lookerstudio.google.com/embed/reporting/8d86d734-53f2-4237-ab34-fb51cc170d69">
+        src="https://lookerstudio.google.com/embed/reporting/aca61a0e-718b-4480-8a8b-01769db8ad8f/page/Xgy7D">
       </iframe>
     </section>
   </div>
@@ -320,7 +320,7 @@
         priorityMedium: "ปานกลาง", priorityMediumDesc: "เร่งด่วนระดับนึง",
         priorityHigh: "สูง", priorityHighDesc: "เร่งด่วน",
         labelContact: "ช่องทางติดต่อกลับ (ไม่บังคับ)",
-        placeholderContact: "Line ID ติดตามสถานะผ่าน LineOA Youth THA",
+        placeholderContact: "Line ID ติดตามสถานะผ่าน LineOA",
         submitBtn: "📤 ส่งรายงานการซ่อม",
         submitBtnLoading: "⏳ กำลังส่งข้อมูล...",
         successTitle: "✅ ส่งรายงานเรียบร้อยแล้ว!",
@@ -345,16 +345,16 @@
         reportTypeSelf: "Report an incident you found",
         labelLocation: "Your message",
         placeholderLocation: "Such as policies that you want to make",
-        labelEquipment: "Equipment to Repair",
-        placeholderEquipment: "e.g., Light bulb, Fan, Air conditioner",
+        labelEquipment: "Who does this benefit?",
+        placeholderEquipment: "Such as people in the community, the general public",
         labelProblem: "Problem Description",
         placeholderProblem: "Describe the problem, impacts, or suspected causes",
         labelPriority: "Urgency Level",
         priorityLow: "Low", priorityLowDesc: "Not urgent",
         priorityMedium: "Medium", priorityMediumDesc: "Partially usable",
         priorityHigh: "High", priorityHighDesc: "Urgent",
-        labelContact: "Contact Information",
-        placeholderContact: "Line ID to track repair status with LineOA TUPP SC",
+        labelContact: "Contact Information (not compulsory)",
+        placeholderContact: "Line ID to track repair status with LineOA",
         submitBtn: "📤 Submit Report",
         submitBtnLoading: "⏳ Submitting...",
         successTitle: "✅ Report Submitted Successfully!",
