--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         priorityHigh: "สูง", priorityHighDesc: "เร่งด่วน",
         labelContact: "ช่องทางติดต่อกลับ (ไม่บังคับ)",
         placeholderContact: "Line ID ติดตามสถานะผ่าน LineOA",
-        submitBtn: "📤 ส่งรายงานการซ่อม",
+        submitBtn: "📤 ส่งรายงาน",
         submitBtnLoading: "⏳ กำลังส่งข้อมูล...",
         successTitle: "✅ ส่งรายงานเรียบร้อยแล้ว!",
         successDetail: "ทางเราจะนำไปเสนอต่อหน่วยงานภาครัฐ <br>หมายเลขรายงาน:",
